fix: Replace deprecated Java APIs and upgrade JUnit 4.10 to 4.13.2
- Replace new Integer/Long/Double/Float/Boolean() with valueOf() (~120 occurrences)
- Replace Class.forName().newInstance() with getDeclaredConstructor().newInstance() (7 files)
- Replace StringBuffer with StringBuilder in FormGenerator and DigitalSignature
- Replace new URL(string) with URI.create(string).toURL() (18 files)
- Replace String.getBytes() with getBytes(StandardCharsets.UTF_8) (7 files)
- Upgrade JUnit 4.10 → 4.13.2 JAR with hamcrest-core 1.3 dependency

All deprecated wrapper constructors marked for removal since Java 9.
Class.newInstance() deprecated since Java 9, URL constructors since Java 20.

https://claude.ai/code/session_011FMTsGBfCHAEWXoCq55fk9